--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -6,7 +6,6 @@
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
         <meta content="ie=edge" http-equiv="X-UA-Compatible">
-        <!-- includo bootstrap css e js -->
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/CSS/style.css}">
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.2.0/css/all.min.css}">
@@ -17,7 +16,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" th:fragment="navbar(currentPage)">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">LOGO</a>
+        <a class="navbar-brand" th:href="@{/photos}">LOGO</a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler"
                 data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
@@ -32,7 +31,6 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
