--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo List')}"></th:block>
+    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo Detail')}"></th:block>
 </head>
 <body>
 <nav th:replace="~{/fragments/resources :: navbar(currentPage='photos')}"></nav>
@@ -10,14 +10,14 @@
         <div class="col-10 offset-1 bg-light py-4 border rounded-3 border-dark">
             <div class="row">
                 <div class="col-4">
-                    <img class="card-img-top" th:alt="*{title}" th:src="*{url}">
+                    <img class="card-img-top rounded-3" th:alt="*{title}" th:src="*{url}">
                 </div>
                 <div class="col-8">
                     <h2 class="card-title" th:text="*{title}"></h2>
                     <p class="card-text" th:text="*{description}"></p>
                     <div class="categorie">
                         <h3>Categorie</h3>
-
+                        <!--            in questo ul mettero' le categories-->
                         <ul class="" th:each="category : ${photo.categories}" th:object="${category}">
                             <li class="" th:text="*{name}"></li>
                         </ul>
