--- a/src/main/resources/templates/photos/list.html
+++ b/src/main/resources/templates/photos/list.html
@@ -12,7 +12,7 @@
     <div class="row g-4 mt-3">
         <!--        messaggio che cambiera' in base all'utente-->
         <div class="col-6">
-            <h1>Benvenuto visitatore nel Photo Portfolio di MeMedesimo</h1>
+            <h1>Benvenuto visitatore nel Photo Portfolio di Daniel</h1>
             <a class="btn btn-dark" th:href="@{/photos/create}">Aggiungi una foto</a>
 
         </div>
