--- a/src/main/resources/templates/photos/form.html
+++ b/src/main/resources/templates/photos/form.html
@@ -1,122 +1,37 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo Detail')}"></th:block>-->
-<!--</head>-->
-<!--<body th:with="isEdit=${photo.id != null}">-->
-<!--<nav th:replace="~{/fragments/resources :: navbar(currentPage='Form')}"></nav>-->
-<!--<div class="container">-->
-<!--    <h1 th:text="${isEdit ? 'Edit Photo' : 'Add New Photo'}"></h1>-->
-<!--    <form class="row"-->
-<!--          enctype="multipart/form-data"-->
-<!--          id="photo-form"-->
-<!--          method="POST"-->
-<!--          th:action="@{${formAction}}"-->
-<!--          th:object="${photo}"-->
-<!--          th:with="formAction=${isEdit ? '/books/edit/'+ book.id : '/books/create'}">-->
-
-<!--        <div class="col-6">-->
-<!--            <label class="form-label" for="photo-title">Title</label>-->
-<!--            <input class="form-control" id="photo-title" th:field="*{title}" type="text">-->
-<!--            &lt;!&ndash;                   th:errorClass="is-invalid"&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div class="form-text">Title must not be blank</div>&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div th:if="${#fields.hasErrors('title')}" class="invalid-feedback">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;                    <li th:each="err : ${#fields.errors('title')}" th:text="${err}"></li>&ndash;&gt;-->
-<!--            &lt;!&ndash;                </ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-<!--        </div>-->
-<!--        <div class="col-6">-->
-<!--            <label class="form-label" for="photo-description">Title</label>-->
-<!--            <input class="form-control" id="photo-description" th:field="*{description}" type="text">-->
-<!--            &lt;!&ndash;                   th:errorClass="is-invalid"&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div class="form-text">Title must not be blank</div>&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div th:if="${#fields.hasErrors('title')}" class="invalid-feedback">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;                    <li th:each="err : ${#fields.errors('title')}" th:text="${err}"></li>&ndash;&gt;-->
-<!--            &lt;!&ndash;                </ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-<!--        </div>-->
-<!--        <div class="col-6">-->
-<!--            <label class="form-label" for="photo-url">Title</label>-->
-<!--            <input class="form-control" id="photo-url" th:field="*{url}" type="text">-->
-<!--            &lt;!&ndash;                   th:errorClass="is-invalid"&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div class="form-text">Title must not be blank</div>&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div th:if="${#fields.hasErrors('title')}" class="invalid-feedback">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;                    <li th:each="err : ${#fields.errors('title')}" th:text="${err}"></li>&ndash;&gt;-->
-<!--            &lt;!&ndash;                </ul>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-<!--        </div>-->
-<!--        <div class="col-4">-->
-<!--            <h3>Visible</h3>-->
-<!--            <input class="form-check-input" th:field="*{visible}" th:id="|cat_${cat.id}|" th:value="${}"-->
-<!--                   type="checkbox">-->
-<!--            <label class="form-check-label">-->
-<!--            </label>-->
-<!--        </div>-->
-<!--        <div class="col-4">-->
-<!--            <h3>Categories</h3>-->
-<!--            <div class="form-check" th:each="cat : ${categoryList}">-->
-<!--                <input class="form-check-input" th:field="*{categories}" th:id="|cat_${cat.id}|" th:value="${cat.id}"-->
-<!--                       type="checkbox">-->
-<!--                <label class="form-check-label" th:for="|cat_${cat.id}|" th:text="${cat.name}">-->
-<!--                </label>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </form>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo Detail')}"></th:block>
+    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Edit Photo')}"></th:block>
 </head>
-<body th:with="isEdit=${photo.id != null}">
-<nav th:replace="~{/fragments/resources :: navbar(currentPage='Form')}"></nav>
+<body>
+<nav th:replace="~{/fragments/resources :: navbar(currentPage='edit')}"></nav>
 <div class="container">
-    <h1 th:text="${isEdit ? 'Edit Photo' : 'Add New Photo'}"></h1>
-    <form class="row"
-          enctype="multipart/form-data"
-          id="photo-form"
-          method="POST"
-          th:action="@{${formAction}}"
-          th:object="${photo}"
-          th:with="formAction=${isEdit ? '/books/edit/'+ book.id : '/books/create'}">
-
-        <div class="col-6">
-            <label class="form-label" for="photo-title">Title</label>
-            <input class="form-control" id="photo-title" th:field="*{title}" type="text">
-
+    <h1>Edit Photo</h1>
+    <form method="post" th:action="@{/photos/update}" th:object="${photo}">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input class="form-control" id="title" name="title" th:field="*{title}" type="text">
         </div>
-        <div class="col-6">
-            <label class="form-label" for="photo-description">Title</label>
-            <input class="form-control" id="photo-description" th:field="*{description}" type="text">
-
+        <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" name="description" th:field="*{description}"></textarea>
         </div>
-        <div class="col-6">
-            <label class="form-label" for="photo-url">Title</label>
-            <input class="form-control" id="photo-url" th:field="*{url}" type="text">
-
+        <div class="form-group">
+            <label for="url">URL</label>
+            <input class="form-control" id="url" name="url" th:field="*{url}" type="text">
         </div>
-        <div class="col-4">
-            <h3>Visible</h3>
-            <input class="form-check-input" th:field="*{visible}" th:id="|cat_${cat.id}|" th:value="${}"
-                   type="checkbox">
-            <label class="form-check-label">
-            </label>
+        <div class="form-group form-check">
+            <input class="form-check-input" id="visible" name="visible" th:field="*{visible}" type="checkbox">
+            <label class="form-check-label" for="visible">Visible</label>
         </div>
-        <div class="col-4">
-            <h3>Categories</h3>
-            <div class="form-check" th:each="cat : ${categoryList}">
-                <input class="form-check-input" th:field="*{categories}" th:id="|cat_${cat.id}|" th:value="${cat.id}"
-                       type="checkbox">
-                <label class="form-check-label" th:for="|cat_${cat.id}|" th:text="${cat.name}">
-                </label>
-            </div>
-        </div>
+        <!--        <div class="form-group">-->
+        <!--            <label for="categories">Categories</label>-->
+        <!--            <select class="form-control" id="categories" multiple name="categories" th:field="*{categories}">-->
+        <!--                <option th:each="category : ${categories}" th:text="${category.name}"-->
+        <!--                        th:value="${category.id}"></option>-->
+        <!--            </select>-->
+        <!--        </div>-->
+        <button class="btn btn-primary" type="submit">Save</button>
     </form>
 </div>
 </body>
