--- a/src/main/resources/templates/photos/form.html
+++ b/src/main/resources/templates/photos/form.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Edit Photo')}"></th:block>
+    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo Detail')}"></th:block>
 </head>
-<body>
-<nav th:replace="~{/fragments/resources :: navbar(currentPage='edit')}"></nav>
+<body th:with="isEdit=${photo.id != null}">
+<nav th:replace="~{/fragments/resources :: navbar(currentPage='Form')}"></nav>
 <div class="container">
-    <h1>Edit Photo</h1>
-    <form method="post" th:action="@{/photos/update}" th:object="${photo}">
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input class="form-control" id="title" name="title" th:field="*{title}" type="text">
+    <h1 th:text="${isEdit ? 'Edit Photo' : 'Add New Photo'}"></h1>
+    <form class="row g-4"
+          enctype="multipart/form-data"
+          id="photo-form"
+          method="POST"
+          th:action="@{${formAction}}"
+          th:object="${photo}"
+          th:with="formAction=${isEdit ? '/photos/edit/'+ photo.id : '/photos/create'}">
+
+        <div class="col-6">
+            <label class="form-label" for="title">Title</label>
+            <input class="form-control" id="title" th:errorClass="is-invalid" th:field="*{title}" type="text">
+            <div class="form-text">Title must not be blank</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">
+                <ul>
+                    <li th:each="err : ${#fields.errors('title')}" th:text="${err}"></li>
+                </ul>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <textarea class="form-control" id="description" name="description" th:field="*{description}"></textarea>
+        <div class="col-6">
+            <label class="form-label" for="description">Description</label>
+            <input class="form-control" id="description" th:field="*{description}" type="text">
         </div>
-        <div class="form-group">
-            <label for="url">URL</label>
-            <input class="form-control" id="url" name="url" th:field="*{url}" type="text">
+        <div class="col-6">
+            <label class="form-label" for="url">Image Url</label>
+            <input class="form-control" id="url" th:field="*{url}" type="text">
         </div>
-        <div class="form-group form-check">
-            <input class="form-check-input" id="visible" name="visible" th:field="*{visible}" type="checkbox">
-            <label class="form-check-label" for="visible">Visible</label>
+        <div class="col-4">
+            <h5>Check to make visible </h5>
+            <input class="form-check-input" id="visible" th:field="*{visible}" type="checkbox"
+                   value="visible">
         </div>
-        <!--        <div class="form-group">-->
-        <!--            <label for="categories">Categories</label>-->
-        <!--            <select class="form-control" id="categories" multiple name="categories" th:field="*{categories}">-->
-        <!--                <option th:each="category : ${categories}" th:text="${category.name}"-->
-        <!--                        th:value="${category.id}"></option>-->
-        <!--            </select>-->
-        <!--        </div>-->
-        <button class="btn btn-primary" type="submit">Save</button>
+        <div class="col-4">
+            <h3>Categories</h3>
+            <div class="form-check" th:each="cat : ${categories}">
+                <input class="form-check-input" th:field="*{categories}" th:id="|cat_${cat.id}|" th:value="${cat.id}"
+                       type="checkbox">
+                <label class="form-check-label" th:for="|cat_${cat.id}|" th:text="${cat.name}">
+                </label>
+            </div>
+        </div>
+        <div class="col-12 mt-3">
+            <button class="btn btn-info" type="submit">Save</button>
+            <a class="btn btn-dark" th:href="@{/photos}">Cancel</a>
+        </div>
     </form>
 </div>
 </body>
