--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -14,7 +14,8 @@
     </th:block>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary p-0" th:fragment="navbar(currentPage)">
+<nav class="navbar navbar-expand-lg bg-body-tertiary p-0 border-bottom border-secondary border-3 border-opacity-50 "
+     th:fragment="navbar(currentPage)">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/photos}"><img class="logo-navbar"
                                                           src="https://parspng.com/wp-content/uploads/2022/10/camerapng.parspng.com-11.png"></a>
@@ -26,13 +27,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a aria-current="page" class="nav-link fw-bold fs-5" th:href="@{/photos}">Home</a>
+                    <a aria-current="page" class="nav-link fw-bold fs-5"
+                       th:classappend="${currentPage == 'photos' ? 'active' : ''}"
+                       th:href="@{/photos}">Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold fs-5" href="#">Link</a>
+                    <a class="nav-link fw-bold fs-5" th:classappend="${currentPage == 'categories' ? 'active' : ''}"
+                       th:href="@{/categories}">Categories</a>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
@@ -43,4 +46,3 @@
 
 <hr>
 </body>
-
