auth + inizio api

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,14 @@
 *{
 list-style-type: none;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 
 body{
 min-height: 100vh;
-background-color: light-gray;
+background-color: lightgray;
+font-family: 'Roboto', sans-serif;
 }
 
 .logo-navbar{
