--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -18,6 +18,7 @@
                 >
                     <div>
                         <h4 th:text="*{name}"></h4>
+                        <h6 th:text="*{description}"></h6>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <a class="btn btn-light border-primary border-3 border-opacity-50 text-primary me-1"
@@ -34,7 +35,7 @@
                     </div>
                 </li>
             </ul>
-            <div class="alert alert-info" th:unless="${categories.size > 0}">
+            <div class="alert alert-info fw-bold" th:unless="${categories.size > 0}">
                 There are no categories
             </div>
         </div>
