--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -6,6 +6,9 @@
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
         <meta content="ie=edge" http-equiv="X-UA-Compatible">
+        <link href="https://fonts.googleapis.com" rel="preconnect">
+        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/CSS/style.css}">
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.0/css/all.min.css}">
@@ -29,11 +32,16 @@
                 <li class="nav-item">
                     <a aria-current="page" class="nav-link fw-bold fs-5"
                        th:classappend="${currentPage == 'photos' ? 'active' : ''}"
-                       th:href="@{/photos}">Photos</a>
+                       th:href="@{/photos}">Photos List</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fw-bold fs-5" th:classappend="${currentPage == 'categories' ? 'active' : ''}"
                        th:href="@{/categories}">Categories</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link fw-bold fs-5" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
