--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="~{/fragments/resources :: head(pageTitle='Photo Detail')}"></th:block>
+    <th:block th:replace="~{/fragments/resources :: head(pageTitle='photos')}"></th:block>
 </head>
 <body>
 <nav th:replace="~{/fragments/resources :: navbar(currentPage='photos')}"></nav>
 <div class="container pt-5" th:object="${photo}">
     <div class="row">
-        <div class="col-10 offset-1 bg-light py-4 border rounded-3 border-dark">
+        <div class="col-10 offset-1 custom-bg py-4 border rounded-3 border-dark">
             <div class="row">
                 <div class="col-4 relative-container">
-                    <img class="card-img-top rounded-3" th:alt="*{title}" th:src="*{url}">
+                    <img class="card-img-top rounded-3 border border-dark" th:alt="*{title}" th:src="*{url}">
                     <a class="fs-2 rounded-3 figlio-absolute text-center" th:href="@{|/photos/edit/${photo.id}|}"><i
                             class="fa-solid fa-square-pen"></i></a>
                     <form class="figlio-absolute-delete rounded-3 "
@@ -23,8 +23,8 @@
                     </form>
                 </div>
                 <div class="col-8">
-                    <h2 class="card-title" th:text="*{title}"></h2>
-                    <p class="card-text" th:text="*{description}"></p>
+                    <h1 class="card-title mb-3" th:text=' | " *{title} " | '></h1>
+                    <p class="card-text bg-light rounded border border-dark p-2" th:text="*{description}"></p>
 
                     <div class="categorie d-flex justify-content-between">
                         <h3>Categorie</h3>
@@ -37,12 +37,17 @@
                 </div>
             </div>
             <div class="card-body mt-4">
-                <a class="card-link btn btn-light border border-dark" th:href="@{/photos}">Torna alla lista delle
+                <a class="card-link btn btn-light border border-dark me-2" th:href="@{/photos}">Torna alla lista delle
                     foto</a>
-                <a class="card-link btn btn-primary" href="https://picsum.photos/images">Cerca foto su Lorem Picsum</a>
+                <a class="card-link btn btn-primary border-dark" href="https://picsum.photos/images">Cerca foto su Lorem
+                    Picsum</a>
             </div>
         </div>
     </div>
 </div>
 </body>
 </html>
+
+
+
+
